--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
-    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
 
-<!--<link rel="stylesheet" href="/css/style.css">
-    <script src="/js/semscroll.js"></script>-->
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/semscroll.js"></script>
     <title>Home</title>
 </head>
 
@@ -15,8 +14,7 @@
     
     <main>
         <div class="logo">
-            <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
-            <!--<img src="/img/logo.png" alt="logo">-->
+            <img src="/img/logo.png" alt="logo">
         </div>
         <div class="bemvindo">Seja Bem-Vindo ao</div>
         
@@ -28,14 +26,12 @@
         
         <div class="botoes">    
             <div class="botaologin">
-                <a href="/BookBee/src/main/resources/templates/login.html">
-            <!--<a href="/login">-->
+            <a href="/login">
                 <button>Login</button>
             </a>
         </div>
         <div class="botaocadastro">
-            <a href="/BookBee/src/main/resources/templates/cadastro.html">
-       <!-- <a href="/cadastro">-->
+            <a href="/cadastro">
                 <button>Cadastro</button>
             </a>
         </div>
@@ -43,20 +39,17 @@
         
         <div class="container">
             <div class="livro1">
-                <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-                <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+                <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
                 <p>Clássicos</p>
             </div>
             
             <div class="livro2">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Romances</p>
             </div>
     
            <div class="livro3">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Novelas</p>
             </div>
         </div>
