--- a/BookBee/src/main/resources/templates/cadastro.html
+++ b/BookBee/src/main/resources/templates/cadastro.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
-    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
-
-<!--link rel="stylesheet" href="/static/css/style.css">
-    <script src="/js/semscroll.js"></script>-->
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/semscroll.js"></script>
 
     <title>Cadastro</title>
 </head>
@@ -16,7 +13,7 @@
     <main>
         <div class="containerlogocas">
             <div class="logofixacas">
-                    <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+                    <img src="img/logo.png" alt="logo">
             </div>
         </div>
         
@@ -25,10 +22,7 @@
         </div>
     
         <div class="formcadastro">
-            <form action="" method="post">
-                <p th:if="${erro != null}"
-                th:text="${erro}"
-                class="errp-login"></p>
+            <form action="/cadastra" method="post">
                 
                 <label for="Nome">Nome</label>
                 <input name="nome" type="text" id="nome" placeholder="Digite seu Nome" >
@@ -40,15 +34,17 @@
                 <input name="senha" type="password" required id="senha" placeholder="Insira sua Senha" >
                 <div class="logar">
                     <ul>
-                        <li>Já cadastrado? <a href="/BookBee/src/main/resources/templates/login.html">Faça seu Login!</a></li>
-                   <!-- <li>Já cadastrado? <a href="/login.html">Faça seu Login!</a></li>--> 
+                        <li>Já cadastrado? <a href="/login">Faça seu Login!</a></li> 
                     </ul>
                 </div>
                 
+                <p th:if="${erro != null}"
+                th:text="${erro}"
+                class="errp-login"></p>
                 
                 </div>
                 <div class="botaocadastro1">
-                    <button><a href="/BookBee/src/main/resources/templates/main.html">Cadastrar</a></button>
+                    <button type="submit"><a>Cadastrar</a></button>
                     </a>
                 </div>
                 </form>
@@ -57,18 +53,15 @@
 
     <div class="container">
         <div class="livro04">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-        <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
         <p>Terror/Horror</p>
         </div>
         <div class="livro05">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-         <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+         <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos"> 
         <p>Aventura</p>
         </div>
         <div class="livro06" >
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Fantasia</p>
         </div>
     </div>
