--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
-    <script src="/BookBee/src/main/resources/static/js/mostrasenha.js"></script>
-    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
 
-<!--link rel="stylesheet" href="/static/css/style.css">
-    <script src="/js/mostrasenha.js"></script>
-    <script src="/js/semscroll.js"></script>-->
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/mostrasenha.js"></script>
+    <script src="js/semscroll.js"></script>
 
     <title>Login</title>
 </head>
@@ -19,7 +16,7 @@
     <aside>
         <div class="containerlogo">
             <div class="logofixa">
-            <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
     </aside>
     <main>
@@ -29,7 +26,7 @@
         </div>
     
         <div class="formlogin">
-            <form method="post" action="">
+            <form method="post" action="/logar">
     
                 <label for="E-mail">E-mail</label>
                 <input type="email" name="email" placeholder="Insira seu E-mail" id="email" required>
@@ -42,13 +39,13 @@
                     <ul>
                         <li>
                             <span class="cores">Não Cadastrado? </span>
-                            <a href="/BookBee/src/main/resources/templates/cadastro.html">
+                            <a href="/cadastro">
                                 Crie sua conta!</a>
                             </li>
                     </ul>
                 </div>
                 <div class="botaologin1">
-                    <button><a href="/BookBee/src/main/resources/templates/main.html">Login</a></button>
+                    <button type="submit"><a>Login</a></button>
                     </a>
                 </div>
             </form>
@@ -56,18 +53,15 @@
     
     <div class="container">
         <div class="livro01">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Contos</p>
         </div>
         <div class="livro02">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Poesias</p>
         </div>
         <div class="livro03">
-            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+            <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">    
             <p>Não-Ficção</p>
         </div>
     </div>
