--- a/BookBee/src/main/resources/templates/usuario.html
+++ b/BookBee/src/main/resources/templates/usuario.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <title>Busca</title>
+    <title>Inicial</title>
 </head>
 <body>
     <div class="containerlogo">
         <div class="logofixamain">
-            <img src="/img/logo.png" alt="logo">
+            <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
         </div>
     </div>
 
     <aside class="sidebar">
         <header class="sidebar-header">
-            <img class="hexagomenu" src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <img class="hexagomenu" src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
         </header>
         <nav>
             <button>
                 <span>
-                    <img src="/img/Home.png" alt="home">
-                    <a href="/livros/"></a>
-                    <span><a href="/livros/">Home</a></span>
+                    <img src="/BookBee/src/main/resources/static/img/Home.png" alt="home">
+                    <a href="/BookBee/src/main/resources/templates/main.html"></a>
+                    <span><a href="/BookBee/src/main/resources/templates/main.html">Home</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/img/Goal.png" alt="meta">
+                    <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
                     <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
                     <span><a href="#">Metas</a></span>
                 </span>
@@ -38,28 +38,28 @@
     
             <button>
                 <span>
-                    <img src="/img/Favorites.png" alt="Favoritos">
+                    <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
                     <span><a href="#">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/img/Quote.png" alt="Citações">
+                    <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
                     <span><a href="#">Anotações</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                <a href="/logout"></a>
-                    <img src="/img/Exit.png" alt="Sair">
-                    <span><a href="/logout">Sair</a></span>
+                <a href="/BookBee/src/main/resources/templates/home.html"></a>
+                    <img src="/BookBee/src/main/resources/static/img/Exit.png" alt="Sair">
+                    <span><a href="/BookBee/src/main/resources/templates/home.html">Sair</a></span>
                 </span>
             </button>
             
             <div class="logomenu">
-                <img src="/img/logomenu.png" alt="">
+                <img src="/BookBee/src/main/resources/static/img/logomenu.png" alt="">
             </div>
 
             <div class="linha"></div>
@@ -68,23 +68,16 @@
 
     <main class="main">
         <div class="usuario">
-            <a href="#"><img src="/img/user.png" alt="Foto do Usuário"></a>
+            <a href="#"><img src="/BookBee/src/main/resources/static/img/user.png" alt="Foto do Usuário"></a>
             <p id="username">Nome do Usuário</p> 
         </div>
-        
+
         <div class="barradepes">
-            <input type="text" id="search-txt" placeholder="Encontre o livro que você gosta...">
-            <button id="btnBuscar" type="button">
+            <input type="text" class="search-txt" placeholder="Encontre o livro que você gosta...">
+            <script src="/BookBee/src/main/resources/static/js/busca.js"></script>
                 <img src="/BookBee/src/main/resources/static/img/lupa.png" alt="Lupa">
-            </button>
+                 
+            </a>
         </div>
-        
-        <div class="resultadoPesquisa">
-            <ul id="livros" class="resultGrid">
-
-            </ul>
-        </div>
-
     </main>
-    <script src="/js/busca.js"></script>
 </body>
