--- a/BookBee/src/main/resources/templates/busca.html
+++ b/BookBee/src/main/resources/templates/busca.html
@@ -45,16 +45,16 @@
     
             <button>
                 <span>
-                    <img src="/img/Quote.png" alt="Citações">
+                    <img src="  /img/Quote.png" alt="Citações">
                     <span><a href="#">Anotações</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                <a href="/logout"></a>
+                <a href="/logout/"></a>
                     <img src="/img/Exit.png" alt="Sair">
-                    <span><a href="/logout">Sair</a></span>
+                    <span><a href="/logout/">Sair</a></span>
                 </span>
             </button>
             
@@ -75,7 +75,7 @@
         <div class="barradepes">
             <input type="text" id="search-txt" placeholder="Encontre o livro que você gosta...">
             <button id="btnBuscar" type="button">
-                <img src="/BookBee/src/main/resources/static/img/lupa.png" alt="Lupa">
+                <img src="/img/lupa.png" alt="Lupa">
             </button>
         </div>
         
